[package]
name = "asar-save"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["write"]
write = ["dep:brotli", "dep:flate2", "dep:zip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
flate2 = { version = "1.0", optional = true }
zip = { version =  "0.6", optional = true, default-features = false }
brotli = { version = "3", optional = true }

[dev-dependencies]
zip = { version =  "0.6", default-features = false, features = ["deflate"] }
